# VoiceRecognizer

./: .gitignore  README.md  Speach2TextXF.py  VoiceRecognizer.py  VoiceRecorder.py  pyproject.toml  readme.md  requirements.txt
src/voice_recognizer/: Speach2TextXF.py  VoiceRecognizer.py  VoiceRecorder.py  __init__.py  _logging.py  log_config.yaml  voice_recognize.yaml
