[project]
name = "voice-recognizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tonyddg", email = "799052200@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "requests>=2.32.5",
    "sounddevice>=0.5.3",
    "tyro>=0.9.35",
]

[project.scripts]
voice-recognizer = "voice-recognizer:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
